# SmartScope

./: .gitignore  Dockerfile  Dockerfile-0.6  Dockerfile-0.62  LICENSE  README.md  VERSION  docker-compose copy.yml  docker-compose-template.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.cache/matplotlib/: fontlist-v330.json
.github/workflows/: autodocs.yml
Docker/: Dockerfile-base  Dockerfile-smartscope  build.sh  entrypoint.sh
Docker/SmartScope/: database.conf  docker-compose.yml  smartscope.conf  smartscope.ps1  smartscope.sh  smartscope.yml
Docker/installation/: database.conf  docker-compose.yml  smartscope.sh  smartscope.yml
SerialEM-python/: MacroMasterList.h  PySEMSocket.cpp  PySEMSocket.h  SerialEMModule.cpp  buildmodules  setup.py
SerialEM-python/.hg/: dirstate  hgrc  undo.desc
SerialEM-python/serialem.egg-info/: PKG-INFO  SOURCES.txt
Smartscope/: .local.env  __init__.py  makefile  mydatabase  requirements.txt  sql_update.sql
Smartscope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Smartscope/Info/: changelog.txt  todo.txt
Template_files/: Atlas.txt  Autoloader.txt  Hole.txt  Hole_bis.txt  Square.txt  svgcolors.json  template.npy
config/: baseDB.sql  requirements.txt
docs/: Makefile  make.bat
migrations/: 0001_initial.py  0002_auto_20210616_1303.py  0003_auto_20210618_0958.py  0004_holemodel_manual_label.py  0005_auto_20210702_1404.py  0006_highmagmodel_angast.py  0007_auto_20210712_2042.py  0008_gridcollectionparams_tilt_angle.py  0009_auto_20210831_0758.py
others/: 20221021_atlas_patterns.html  20221026_ptolemy-api.html  analysis.ipynb  atlas_patterns.ipynb
scripts/: Activate.sh  Install.sh  Smartscope.sh  SmartscopeLaunch.sh  syncAWSdb.sh
serialem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
static/: base.css  base.js  browser.js  evaluation.js  manifest.json  reports.css  reports.js  run_session.js  setup_session.js  websocket.js
(+454 files in other folders)
